--- a/symfony_fw/templates/render/module/menu_root.html.twig
+++ b/symfony_fw/templates/render/module/menu_root.html.twig
@@ -13,14 +13,14 @@
                         {% set href = path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': value.id, 'urlExtra': ""}) %}
                     {% endif %}
                     
-                    <li class="parent">
-                        <a class="target {% if value.children|length > 0 %}target_clean{% endif %}" href="{{href}}">
+                    <li class="parent main">
+                        <a class="target {% if value.children|length > 0 %}target_parent{% endif %}" href="{{href}}">
                             <span>{{value.menu_name}}</span>
                             <i class="material-icons" {% if value.children|length == 0 %}style="visibility: hidden; width: 0;"{% endif %}>keyboard_arrow_down</i>
                         </a>
                         
                         {% if value.children|length > 0 %}
-                            <div class="mdc-elevation--z8 parent_content">
+                            <div class="parent_content">
                                 {{macro.menuRootChildrenDesktop(urlLocale, value.children)}}
                             </div>
                         {% endif %}
@@ -41,7 +41,7 @@
                     {% set href = path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': value.id, 'urlExtra': ""}) %}
                 {% endif %}
                 
-                <a class="mdc-list-item {% if value.children|length > 0 %}target_clean{% endif %}" href="{{href}}">
+                <a class="mdc-list-item {% if value.children|length > 0 %}target_parent{% endif %}" href="{{href}}">
                     <span>{{value.menu_name}}</span>
                     <i class="mdc-list-item__graphic material-icons parent_icon" {% if value.children|length == 0 %}style="visibility: hidden; width: 0;"{% endif %}>toc</i>
                 </a>
@@ -75,7 +75,7 @@
                     </a>
                     
                     {% if value.children|length > 0 %}
-                        <div class="mdc-elevation--z8 parent_content">
+                        <div class="parent_content">
                             {{self.menuRootChildrenDesktop(urlLocale, value.children)}}
                         </div>
                     {% endif %}
@@ -101,7 +101,7 @@
                     {% set href = path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': value.id, 'urlExtra': ""}) %}
                 {% endif %}
                 
-                <a class="mdc-list-item {% if value.children|length > 0 %}target_clean{% endif %}" href="{{href}}">
+                <a class="mdc-list-item {% if value.children|length > 0 %}target_parent{% endif %}" href="{{href}}">
                     {{loopSpace}}&nbsp;<span>{{value.menu_name}}</span>
                     <i class="mdc-list-item__graphic material-icons parent_icon" {% if value.children|length == 0 %}style="visibility: hidden; width: 0;"{% endif %}>toc</i>
                 </a>
