--- a/symfony_fw/templates/render/control_panel.html.twig
+++ b/symfony_fw/templates/render/control_panel.html.twig
@@ -531,6 +531,8 @@
                         <a class="mdc-button mdc-button--dense mdc-button--raised" href="{{path("control_panel", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': "cp_microservice_cron_select"})}}">{% trans %}controlPanel_2{% endtrans %}</a>
                     </div>
                     
+                    <p>{% trans %}controlPanelMicroserviceCron_2{% endtrans %}</p>
+                    
                     {% set text = "At minutes [0-59]\n"~
                     "|   At hours [0-23]\n"~
                     "|   |   At days [1-31]\n"~
@@ -570,8 +572,8 @@
                         }, false);
 
                         window.textMicroserviceCron = {
-                            'label_1': "{{"controlPanelMicroserviceCron_2"|trans}}",
-                            'label_2': "{{"controlPanelMicroserviceCron_3"|trans}}"
+                            'label_1': "{{"controlPanelMicroserviceCron_3"|trans}}",
+                            'label_2': "{{"controlPanelMicroserviceCron_4"|trans}}"
                         };
                     </script>
                 {% endif %}
