--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -841,6 +841,10 @@ pre {
     margin-top: -3px;
 }
 
+#form_microservice_deploy_command {
+    height: 200px;
+}
+
 #form_microservice_unit_test_code {
     width: 100%;
     height: 500px;
