--- a/symfony_fw/templates/microservice/api/basic/profile.html.twig
+++ b/symfony_fw/templates/microservice/api/basic/profile.html.twig
@@ -19,7 +19,7 @@
         </button>
         <p class="download_detail_text">{% trans %}apiBasicProfile_5{% endtrans %}</p>
     </div>
-    <div class="download_detail_container">
+    <div class="download_detail_command">
         <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-trailing-icon mdc-text-field--dense">
             <input class="mdc-text-field__input widget_datePicker_input" type="text" value="" autocomplete="off" aria-label="label" name="download_date_start"/>
             <i class="material-icons mdc-text-field__icon" tabindex="0" role="button">date_range</i>
