--- a/symfony_fw/public/scss/system/helper.scss
+++ b/symfony_fw/public/scss/system/helper.scss
@@ -78,6 +78,8 @@ $codeTextColor: #000000;
 $consoleBackgroundColor: #000000;
 $consoleTextColor: #ffffff;
 
+$warningTextColor: #ff0000;
+
 $boxShadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
 $footerHeight: 80px;
