--- a/symfony_fw/templates/render/control_panel/setting.html.twig
+++ b/symfony_fw/templates/render/control_panel/setting.html.twig
@@ -100,7 +100,11 @@
             {{form_row(form.secretPassphrase, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             {{form_row(form.javascriptMinify)}}
             {{form_row(form.serverUser, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+
+            {% if (response.values.serverRoot != "")%}<p class="info_field_warning"><span>{% trans %}setting_16{% endtrans %}</span> "{{response.values.serverRoot}}"</p>{% endif %}
             {{form_row(form.serverRoot, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+
+            {% if (response.values.serverHost != "")%}<p class="info_field_warning"><span>{% trans %}setting_16{% endtrans %}</span> "{{response.values.serverHost}}"</p>{% endif %}
             {{form_row(form.serverHost, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         </div>
     </fieldset>
